@startuml
package "eu:happycoders:shop:adapter:in:rest" {
    package "cart" {
        class CartsController<<adapter>> {}
    }
    package "product" {
        class ProductsController<<adapter>> {}
    }
}

package "eu:happycoders:shop:application:port:in" {
    package "cart" {
        interface EmptyCartUseCase<<port>> {}
        interface GetCartUseCase<<port>> {}
        interface AddToCartUseCase<<port>> {}

        CartsController --> EmptyCartUseCase
        CartsController --> GetCartUseCase
        CartsController --> AddToCartUseCase
    }
    package "product" {
        interface GetProductUseCase<<port>> {}
        interface FindProductsUseCase<<port>>

        ProductsController --> GetProductUseCase
        ProductsController --> FindProductsUseCase
    }
}

package "eu:happycoders:shop:application:service" {
    package "cart" {
        EmptyCartUseCase <|.. EmptyCartService
        GetCartUseCase <|.. GetCartService
        AddToCartUseCase <|.. AddToCartService
    }
    package "product" {
        GetProductUseCase <|.. GetProductService
        FindProductsUseCase <|.. FindProductsService
    }
}

package "eu:happycoders:shop:application:port:out:persistence" {
        interface CartRepository<<port>>
        interface ProductRepository<<port>>

        AddToCartService --> CartRepository
        AddToCartService --> ProductRepository
        EmptyCartService --> CartRepository
        GetCartService --> CartRepository

        FindProductsService --> ProductRepository
        GetProductService --> ProductRepository
}

package "eu:happycoders:shop:adapter:out:persistence" {
        class InMemoryRepository<<adapter>> {}

        CartRepository <|.. InMemoryRepository
        ProductRepository <|.. InMemoryRepository
}
@enduml